--- a/css/style.css
+++ b/css/style.css
@@ -41,15 +41,6 @@ font-family: 'Fjalla One', sans-serif;
   padding-bottom:250px;
 }
 
-footer {
-  padding: 30px 0 30px 0;
-  background: transparent;
-  font-size: 30px;
-  color: white;
-  text-align: center;
-  font-family: 'Lobster';
-}
-
 .name {
   text-align: center;
   font-size: 120px;
@@ -73,9 +64,26 @@ a:hover {
   padding-top: 25px;
 }
 
+.social a {
+  margin: 0 25px 0 25px;
+}
+
 .social img {
   height: 50px;
-  padding: 0 25px 0 25px;
+}
+
+footer {
+  padding: 30px 0 30px 0;
+  background: transparent;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  font-family: 'Lobster';
+}
+
+footer a {
+  color: white;
+  text-decoration: underline;
 }
 
 @media only screen and (max-width : 768px) {
